# hongkong_trade

./: .env.example  .gitignore  README.md  pyproject.toml
hk_trade/: __init__.py  config.py  cron_dispatch.py  install_cron.py  models.py  report.py  run_report.py  sender.py  storage.py  strategy.py  utils.py  verify_8h.py
hk_trade/collectors/: __init__.py  etf.py  options.py
tests/: test_cron_dispatch.py  test_options_collector.py  test_report.py  test_run_report.py  test_strategy.py
